#1486 -- DetailsList: Fixes clipped button inside Details List

--- a/packages/office-ui-fabric-react/src/components/DetailsList/DetailsRow.scss
+++ b/packages/office-ui-fabric-react/src/components/DetailsList/DetailsRow.scss
@@ -53,6 +53,10 @@ $unselectedHoverColor: $ms-color-neutralLighter;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+
+  & > button{
+    width: 100%;
+  }
 }
 
 .isMultiline {
